--- a/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
@@ -19,10 +19,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
-<meta name="author" content="alex">
-<title>marketing restaurant</title>
+<meta name="author" content="">
+<title>FormulaDB - Build Applications Without Code</title>
 <link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="./formuladb-look.css">
-<meta name="frmdb_display_date" content="2020-04-13">
-
+<meta name="frmdb_display_date" content="">
+<style type="text/css">iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}</style>
 </head>
