add HLOOKUP and order total cost

--- a/git/formuladb-env/frmdb-apps/restaurant/order.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/order.html
@@ -98,8 +98,8 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item_id" data-frmdb-pending="undefined">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.order_id" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.restaurant_order" data-frmdb-pending="undefined">
                         </div>
                     </form>
                 </div>
@@ -124,8 +124,8 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item_id" data-frmdb-pending="undefined">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.order_id" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.restaurant_order" data-frmdb-pending="undefined">
                         </div>
                     </form>
                 </div>
@@ -150,8 +150,8 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item_id" data-frmdb-pending="undefined">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.order_id" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.restaurant_order" data-frmdb-pending="undefined">
                         </div>
                     </form>
                 </div>
@@ -176,8 +176,8 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item_id" data-frmdb-pending="undefined">
-                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.order_id" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Menu_Item[]._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.menu_item" data-frmdb-pending="undefined">
+                            <input type="text" style="" readonly="" class="col frmdb-hidden" data-frmdb-value="$FRMDB.Restaurant_Order{}._id" title="" data-frmdb-target-field="$FRMDB.Restaurant_Order_Item{}.restaurant_order" data-frmdb-pending="undefined">
                         </div>
                     </form>
                 </div>
